# LearningGIT

FirstOpenCV/: FirstOpenCV.cpp
Testing/: #Testing.cpp#  CMakeLists.txt  Testing  Testing.cpp
